@@ -19,7 +19,8 @@ Fixes
 * Randomized the Audience Chamber Minnie escord mission (PC only). Some of the enemies that fire projectiles are limited to spawn less than the normal 27 entities that are in that room, either due to crashing or difficulty of the fight
 * When bosses as enemies is turned on, bosses can no longer replace enemies in missions. Also upped the % for a boss to replace an enemy to 5% (from 1.2). Also bosses can only replace at most one enemy per spawnpoint to alleviate memory concerns.
 * Changed wild enemies mode to be limited so that it attempts to match the variety of enemies in the original spawn (IE if a spawn has only shadows, it could be only Dancers. But if a spawn has shadows and soldiers, it could be Dancers and Dusks). This was done to try and alleviate memory issues
-* Adds a 
+* The dataspace mission in Tron is now randomized
+
 
 4.0.3
 
